:rocket:Frontend Funcionando :rocket:

--- a/Src/pages/Login.html
+++ b/Src/pages/Login.html
@@ -37,8 +37,8 @@
       background: #1e40af;
     }
   </style>
-  <script src="js/api.js"></script>
-  <script src="js/main.js" defer></script>
+  <!-- 👇 Caminho ajustado -->
+  <script src="/Src/main.js" defer></script>
 </head>
 <body>
   <form id="loginForm">
